dnl
dnl
dnl configure.in.head:
dnl
dnl
dnl $Id:$
dnl
dnl $Log:$
dnl
dnl
dnl
AC_PREREQ(2.13)
AC_INIT(src/gene3fs.c)

AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_AWK
AC_CHECK_PROG(MD5SUM,md5sum,md5sum)
AC_CHECK_PROG(GREP,grep,grep)

AC_SYS_LARGEFILE

GENE3FS_MAJOR_VERSION=`cat $srcdir/version-major`
GENE3FS_MINOR_VERSION=`cat $srcdir/version-minor`
GENE3FS_MICRO_VERSION=`cat $srcdir/version-micro`


GENE3FS_VERSION=$GENE3FS_MAJOR_VERSION.$GENE3FS_MINOR_VERSION.$GENE3FS_MICRO_VERSION

AC_SUBST(GENE3FS_MAJOR_VERSION)
AC_SUBST(GENE3FS_MINOR_VERSION)
AC_SUBST(GENE3FS_MICRO_VERSION)
AC_SUBST(GENE3FS_VERSION)


VERSION=$GENE3FS_VERSION
PACKAGE=gene3fs

AM_INIT_AUTOMAKE($PACKAGE,$VERSION)


AM_CONFIG_HEADER(src/config.h)

# Checks for header files.
AC_CHECK_HEADERS([malloc.h])
AC_HEADER_STDC
AC_FUNC_MALLOC

AC_C_INLINE
AC_C_CONST

PKG_CHECK_MODULES([EXT2FS],[ext2fs])

LIBEXT2FS_INC=$EXT2FS_CFLAGS
LIBEXT2FS_LIB=$EXT2FS_LIBS

AC_SUBST(LIBEXT2FS_INC)
AC_SUBST(LIBEXT2FS_LIB)


PKG_CHECK_MODULES([E2P],[e2p])


LIBE2P_INC=$E2P_CFALGS
LIBE2P_LIB=$E2P_LIBS

AC_SUBST(LIBE2P_INC)
AC_SUBST(LIBE2P_LIB)

PKG_CHECK_MODULES([BVHD],[libbudgetvhd])


LIBBVHD_INC=$BVHD_CFALGS
LIBBVHD_LIB=$BVHD_LIBS

AC_SUBST(LIBBVHD_INC)
AC_SUBST(LIBBVHD_LIB)


AC_OUTPUT([Makefile
	   src/Makefile])
