dnl
dnl
dnl configure.in:
dnl
dnl
dnl $Id:$
dnl
dnl $Log:$
dnl
dnl
dnl
AC_PREREQ(2.13)
AC_INIT(src/libbudgetvhd.c)

AC_PROG_CC
AC_SYS_LARGEFILE


LIBBUDGETVHD_MAJOR_VERSION=`cat $srcdir/version-major`
LIBBUDGETVHD_MINOR_VERSION=`cat $srcdir/version-minor`
LIBBUDGETVHD_MICRO_VERSION=`cat $srcdir/version-micro`



LIBBUDGETVHD_INTERFACE_VERSION_MIN=$LIBBUDGETVHD_MINOR_VERSION
LIBBUDGETVHD_INTERFACE_VERSION_MAX=$LIBBUDGETVHD_MINOR_VERSION
LIBBUDGETVHD_INTERFACE_REVISION=1

LIBBUDGETVHD_VERSION=$LIBBUDGETVHD_MAJOR_VERSION.$LIBBUDGETVHD_MINOR_VERSION.$LIBBUDGETVHD_MICRO_VERSION

AC_SUBST(LIBBUDGETVHD_MAJOR_VERSION)
AC_SUBST(LIBBUDGETVHD_MINOR_VERSION)
AC_SUBST(LIBBUDGETVHD_MICRO_VERSION)
AC_SUBST(LIBBUDGETVHD_VERSION)

AC_SUBST(LIBBUDGETVHD_INTERFACE_VERSION_MIN)
AC_SUBST(LIBBUDGETVHD_INTERFACE_VERSION_MAX)
AC_SUBST(LIBBUDGETVHD_INTERFACE_REVISION)


LT_RELEASE=$LIBBUDGETVHD_MAJOR_VERSION.$LIBBUDGETVHD_MINOR_VERSION
LT_CURRENT=$LIBBUDGETVHD_INTERFACE_VERSION_MAX
LT_REVISION=$LIBBUDGETVHD_MICRO_VERSION
LT_AGE=`expr $LIBBUDGETVHD_INTERFACE_VERSION_MAX - $LIBBUDGETVHD_INTERFACE_VERSION_MIN`

AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

VERSION=$LIBBUDGETVHD_VERSION
PACKAGE=libbudgetvhd

AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

AM_PROG_LIBTOOL

AM_CONFIG_HEADER(src/config.h)

AC_CHECK_PROG(MD5SUM,md5sum,md5sum)
AC_CHECK_PROG(GREP,grep,grep)
AC_CHECK_PROG(SED,sed,sed)
AC_PROG_AWK

AC_CHECK_HEADERS(fcntl.h malloc.h sys/ioctl.h unistd.h)
AC_CHECK_HEADERS(sys/scsi/impl/uscsi.h scsi/sg.h stdint.h)
AC_CHECK_HEADERS(sys/int_types.h string.h strings.h)
AC_CHECK_HEADERS(dirent.h sys/stat.h)

AC_C_INLINE
AC_C_CONST
AC_HEADER_TIME
AC_CHECK_FUNCS(select strdup strstr)

AC_OUTPUT([Makefile 
	src/Makefile 
	test/Makefile 
	app/Makefile
	libbudgetvhd.pc.src
	libbudgetvhd-config.src],[chmod +x libbudgetvhd-config.src])
